# udemyscraper

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  MANIFEST.in  README.md  coursetemplate.py  debug.html  demo.html  fetch.py  help.txt  main.py  no_selenium.py  object.json  output.json  progressbar.py  requirements.txt  setup.cfg  setup.py  temp.py  udemyscraper.py  warning.txt
.github/ISSUE_TEMPLATE/: PULL_REQUEST_TEMPLATE.md  bug_report.md
html/: dummy.index.html
html/dummy.index_files/: 305025425.js.download  common-udlite-desktop-server-side.b6e2c59805f53655a379.js.download  common-udlite-desktop-server-side.bf20e7b6ab8c7b21458a.css  common-udlite-desktop-udlite-app.64d09bae4a746d4249c0.js.download  common-udlite-desktop-udlite-app.954b4b74c13b44c6c072.css  course-landing-page-udlite-server-side.6069313543f3a58a0918.js.download  course-landing-page-udlite-server-side.b77bc517854b49eadfe2.css  course-landing-page-udlite-udlite-app.f08f17c6706bc0aa79a4.css  course-landing-page-udlite-udlite-app.f13ce8f384eef6271382.js.download  entry-udlite-baseline-manifest.be895d99e5a4bd706730.js.download  entry-udlite-baseline-modern-vendor.79cc2ff54172b7a9e459.js.download  entry-udlite-baseline-modern.5e005ac0ab39f23f4fa1.css  entry-udlite-baseline-modern.95f743001a47b8ff5cfc.js.download  gtm.js.download  js  jsi18n-en-us-discovery-udlite-baseline.76a1c1f637e1352987cc.js.download  (+2 more)
tests/: test_export.py  test_module.py  test_script.bat  test_script.py
texts/: help.txt
udemyscraper/: __init__.py  metadata.py  output.py  udscraperscript.py  utils.py
(+8 files in other folders)
